# degirum_video_capture

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: release.yml
cmake/: BuildExternalDependency.cmake  BuildFFmpeg.cmake
examples/: cv_dvc_benchmark.py
python/: CMakeLists.txt  setup.py  symbol_version.map  video_capture_bindings.cpp
python/degirum_video_capture/: __init__.py
src/: CMakeLists.txt  ResizeCapture.cpp  ResizeCapture.h  VideoCapture.cpp  VideoCapture.h  opencv_enums.h
tests/: ax_dvc_cv_benchmark.py  cv_av_dvc_benchmark_comparison.py  display_frames.py  example.py  example_usage.py  resize_tests.py  test_video_capture.py
